--- a/assets/scss/common/_dark.scss
+++ b/assets/scss/common/_dark.scss
@@ -18,11 +18,6 @@ $navbar-dark-active-color:          $link-color-dark;
 
 /** Theme styles */
 
-body.dark {
-  background: $body-bg-dark;
-  color: $body-color-dark;
-}
-
 body.dark a {
   color: $link-color-dark;
 }
